fixed header spacing

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -44,7 +44,7 @@ header a {
 .nav-bar {
     font-size: 3vw;
     list-style: none;
-    margin: 0.5rem 0;
+    margin: 0.8rem 0;
     padding: 0.5em 2em;
     display: flex;
     justify-content: center;
@@ -58,7 +58,7 @@ header a {
 }
 
 .nav-bar li a:hover {
-    color: var(--primary-color);
+    color: whitesmoke;
     background-color: rgba(0, 0, 0, .8);
     border-radius: 5px;
 }
